# matiec-cmake

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  README.md  main.cc  matiec.nuspec
.github/workflows/: build.yml  vcpkg-release.yml
absyntax/: CMakeLists.txt  absyntax.cc  absyntax.hh  ast_memory.cc  gen_absyntax.py
absyntax_utils/: get_datatype_info.cc  type_initial_value.cc
cmake/: matiecConfig.cmake.in
config/: config.h.in
docs/: AST-OWNERSHIP.md  INTEGRATION.md  MODERNC_DESIGN.md  README.md  STRING-HANDLING.md  STYLE.md
docs/architecture/: CMAKE_MIGRATION_PLAN.md
docs/migration/: V1_MIGRATION_GUIDE.md
docs/release/: V0_3_0_RELEASE_RUNBOOK.md
docs/testing/: V1_BASELINE.md
include/matiec/: matiec.h
include/matiec/ast/: symbol.hpp  visitor.hpp
include/matiec/internal/: compilation_guard.hpp
issues/: TODO.md  p-modern-cpp-style-overview.csv  p1-modernc-phase1-infra.md  p2-ast-ownership-pilot-pass1.csv  p2-memory-safety-guardrails-pass2.csv  p2-raii-sweep-pass2.csv  p2-raii-sweep-pass2.md  p2-stage4-raii-pass1.csv  p3-string-upgrade-pass1.csv  p3-string-upgrade-pass2.csv  p3-string-upgrade-pass2.md  p3-string-upgrade-pass4.md
openspec/: project.md
openspec/changes/add-modernc-phase1-infra/: design.md  tasks.md
openspec/changes/add-modernc-phase2-ast/: proposal.md  tasks.md
openspec/changes/add-vcpkg-release-automation/: design.md  proposal.md  tasks.md
openspec/changes/add-vcpkg-release-automation/specs/vcpkg-publish/: spec.md
openspec/changes/archive/2026-01-25-add-modernc-phase1-infra/: proposal.md
openspec/changes/archive/2026-01-25-add-modernc-phase2-ast/: design.md
openspec/changes/archive/2026-01-25-add-modernc-phase3-types/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-25-add-modernc-phase4-semantics/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-25-add-modernc-phase5-codegen/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-25-add-modernc-phase6-integration/: design.md  proposal.md  tasks.md
openspec/changes/refactor-modern-cpp-l2-l5/: design.md  proposal.md  tasks.md
openspec/changes/refactor-modern-cpp-l2-l5/specs/modernization-governance/: spec.md
openspec/changes/refactor-repo-structure/: design.md  proposal.md  tasks.md
src/: main.cc  main.hh  matiec_lib.cc  runtime_options.cc
src/absyntax/: CMakeLists.txt  absyntax.hh  ast_memory.cc  gen_absyntax.py  visitor.cc  visitor.hh
src/absyntax_utils/: CMakeLists.txt  absyntax_utils.cc  absyntax_utils.hh  add_en_eno_param_decl.cc  debug_ast.cc  function_call_param_iterator.cc  function_param_iterator.cc  get_datatype_info.cc
src/include/matiec/: c_file.hpp  error.hpp  format.hpp  matiec.h  matiec.hpp  scope_exit.hpp  string_utils.hpp
src/include/matiec/ast/: legacy_compat.hpp  visitor_result.hpp
src/include/matiec/codegen/: code_emitter.hpp
src/include/matiec/compiler/: compilation_unit.hpp
src/include/matiec/types/: type.hpp  type_inferrer.hpp  type_registry.hpp  typed_const_value.hpp
src/stage1_2/: CMakeLists.txt  iec_bison.yy  iec_flex.ll  stage1_2.cc  stage1_2.hh  stage1_2_diagnostics.hh  stage1_2_priv.hh
src/stage3/: CMakeLists.txt  array_range_check.cc  array_range_check.hh  case_elements_check.cc  constant_folding.cc  declaration_check.cc  enum_declaration_check.cc  fill_candidate_datatypes.cc  flow_control_analysis.cc  lvalue_check.cc  lvalue_check.hh  modern_semantic_annotations.cc  modern_semantic_annotations.hh  modern_types_bridge.hh  narrow_candidate_datatypes.cc  print_datatypes_error.cc  remove_forward_dependencies.cc  stage3.cc  stage3_diagnostics.hh
src/stage4/: CMakeLists.txt  stage4.cc  stage4.hh  stage4_emitter.hh
src/stage4/generate_c/: generate_c.cc  generate_c_base.cc  generate_c_il.cc  generate_c_inlinefcall.cc  generate_c_typedecl.cc  generate_c_vardecl.cc  generate_location_list.cc  generate_var_list.cc
src/stage4/generate_iec/: generate_iec.cc
src/util/: dsymtable.hh  getopt_compat.c  getopt_compat.h  symtable.cc  symtable.hh
stage1_2/: CMakeLists.txt  iec_bison.yy  iec_flex.ll
stage3/: CMakeLists.txt  array_range_check.cc  constant_folding.cc  declaration_check.cc  fill_candidate_datatypes.cc  lvalue_check.cc
stage4/: CMakeLists.txt  stage4.cc  stage4.hh
stage4/generate_c/: generate_c.cc  generate_c_base.cc  generate_c_il.cc  generate_c_inlinefcall.cc  generate_c_sfc.cc  generate_c_st.cc  generate_c_typedecl.cc  generate_c_vardecl.cc
tests/: CMakeLists.txt
tests/common/: test_utils.cc  test_utils.hh
tests/e2e/: test_cli_v1.cc  test_codegen_regression.cc  test_e2e_compile.cc
tests/fixtures/codegen/: golden_whitelist.txt
tests/unit/: test_ast_modern.cc  test_compilation_unit.cc  test_cpp_api.cc  test_error_handling.cc  test_matiec_api.cc  test_string_utils.cc  test_visitor_result.cc
tools/ci/: check_build_consistency.py
tools/issues/: README.md  TODO.md
tools/issues/archive/: p-modern-cpp-style-overview.md  p0-ci-fix.csv  p1-build-vs-warning-cleanup-pass1.csv  p1-build-vs-warning-cleanup-pass1.md  p1-error-handling-modernization-pass1.csv  p1-error-handling-modernization-pass1.md  p1-error-handling-modernization-pass2.csv  p1-error-handling-modernization-pass2.md  p1-modernc-phase1-infra.csv  p2-ast-ownership-pilot-pass1.csv  p2-ast-ownership-pilot-pass1.md  p2-memory-safety-guardrails-pass1.csv  p2-memory-safety-guardrails-pass1.md  p2-memory-safety-guardrails-pass2.md  p2-modernc-phase2-ast.csv  p2-modernc-phase2-ast.md  p2-raii-sweep-pass2.csv  p2-stage4-raii-pass1.md  p3-modernc-phase3-types.csv  p3-modernc-phase3-types.md  p3-string-upgrade-pass1.md  p3-string-upgrade-pass3.csv  p3-string-upgrade-pass3.md  p3-string-upgrade-pass4.csv  p4-modernc-phase4-semantics.csv  p4-modernc-phase4-semantics.md  p5-modernc-phase5-codegen.csv  p5-modernc-phase5-codegen.md  p6-modernc-phase6-integration.csv  p6-modernc-phase6-integration.md
tools/vcpkg-port/: portfile.cmake  vcpkg.json
util/: symtable.cc  symtable.hh
vcpkg-port/: portfile.cmake
(+7 files in other folders)
